--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,5 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "pytest>=8.4.0",
     "ray>=2.46.0",
+    "sqlalchemy>=2.0.41",
 ]
