--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,10 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "ipykernel>=6.29.5",
+    "numpy>=2.3.0",
     "pytest>=8.4.0",
     "ray>=2.46.0",
+    "scipy>=1.15.3",
     "sqlalchemy>=2.0.41",
 ]
