--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "ipykernel>=6.29.5",
+    "matplotlib>=3.10.3",
     "numpy>=2.3.0",
     "pytest>=8.4.0",
     "ray>=2.46.0",
