google cloud run support, simplified docker execution

--- a/src/examples/circle_packing/Dockerfile
+++ b/src/examples/circle_packing/Dockerfile
@@ -1,2 +1,12 @@
-FROM python:3.13-slim
+FROM python:3.11-slim
+
+RUN useradd -m sandboxuser
+USER sandboxuser
+
 RUN pip install --no-cache-dir numpy scipy
+
+WORKDIR /home/sandboxuser
+
+COPY eval.py .
+
+ENTRYPOINT ["python", "eval.py"]
