--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,11 +5,14 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "bokeh>=3.7.3",
     "google-cloud-logging>=3.12.1",
     "google-cloud-run>=0.10.18",
     "ipykernel>=6.29.5",
     "matplotlib>=3.10.3",
+    "networkx>=3.5",
     "numpy>=2.3.0",
+    "pygraphviz>=1.14",
     "pytest>=8.4.0",
     "ray>=2.46.0",
     "scipy>=1.15.3",
